# x11-clipboard

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: monitor_primary_selection.rs  paste.rs  wait_copy_event.rs
src/: error.rs  lib.rs  run.rs
tests/: batch-test.rs  multiple-targets.rs  simple-test.rs  window-leak.rs
