[package]
name = "x11-clipboard"
version = "0.8.1"
authors = ["quininer kel <quininer@live.com>"]
description = "x11 clipboard support for Rust."
repository = "https://github.com/quininer/x11-clipboard"
documentation = "https://docs.rs/x11-clipboard/"
keywords = [ "x11", "xcb", "clipboard" ]
license = "MIT"

[dependencies]
x11rb = { version = "0.12.0", features = ["xfixes"]}
